Fixed image sizing issue Sizing issue for art page on mobile

--- a/SASS/art_Style.scss
+++ b/SASS/art_Style.scss
@@ -364,6 +364,18 @@ html {
 		align-items: center;
 
 		padding: 1em 0 2em 0;
+
+		h2 {
+			margin-top: 2em;
+		}
+
+		h3 {
+			margin-top: 1em;
+		}
+
+		img {
+			width: 75%;
+		}
 	}
 
 	/* Slideshow container */
